[project]
name = "spend-ease"
version = "2.0.0"
description = "A package that makes spending easier than ever"
readme = "README.md"
authors = [
    { name = "Samaneh Naghdbishi" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.8.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]

[project.scripts]
spend-ease = "spend_ease.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
